--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="wasm_exec.js"></script>
     <script>
       const go = new Go();
-      WebAssembly.instantiateStreaming(fetch('go-wasm/calculator.wasm'), go.importObject).then((result) => {
+      WebAssembly.instantiateStreaming(fetch('calculator.wasm'), go.importObject).then((result) => {
         go.run(result.instance);
       });
     </script>
